changes for updates to tenants model, handle sqlalchemy exceptions (particularly, uniqueness constraints), put back configschema files.
