# service/controllers.py
@@ -1,11 +1,17 @@
-
+import datetime
 from flask import request
 from flask_restful import Resource
 from openapi_core.shortcuts import RequestValidator
 from openapi_core.wrappers.flask import FlaskOpenAPIRequest
+# import psycopg2
+import sqlalchemy
 
 from common import utils, errors
 from service.models import db, LDAPConnection, TenantOwner, Tenant
+
+# get the logger instance -
+from common.logs import get_logger
+logger = get_logger(__name__)
 
 
 class LDAPsResource(Resource):
@@ -15,24 +21,35 @@ class LDAPsResource(Resource):
 
     # @swag_from("resources/ldaps/list.yml")
     def get(self):
+        logger.debug("top of GET /ldaps")
         ldaps = LDAPConnection.query.all()
         return utils.ok(result=[l.serialize for l in ldaps], msg="LDAPs retrieved successfully.")
 
     def post(self):
+        logger.debug("top of POST /ldaps")
         validator = RequestValidator(utils.spec)
         result = validator.validate(FlaskOpenAPIRequest(request))
         if result.errors:
             raise errors.ResourceError(msg=f'Invalid POST data: {result.errors}.')
         validated_params = result.parameters
         validated_body = result.body
+        logger.debug(f"validated_body: {dir(validated_body)}")
         ldap = LDAPConnection(ldap_id=validated_body.ldap_id,
                               url=validated_body.url,
+                              port=validated_body.port,
+                              use_ssl=validated_body.use_ssl,
                               user_dn=validated_body.user_dn,
                               bind_dn=validated_body.bind_dn,
                               bind_credential=validated_body.bind_credential,
-                              account_type=validated_body.account_type)
+                              account_type=validated_body.account_type,
+                              create_time=datetime.datetime.utcnow(),
+                              last_update_time = datetime.datetime.utcnow())
         db.session.add(ldap)
-        db.session.commit()
+        try:
+            db.session.commit()
+        except (sqlalchemy.exc.SQLAlchemyError, sqlalchemy.exc.DBAPIError) as e:
+            msg = utils.get_message_from_sql_exc(e)
+            raise errors.ResourceError(f"Invalid POST data; {msg}")
         return utils.ok(result=ldap.serialize,
                         msg="LDAP object created successfully.")
 
@@ -43,12 +60,14 @@ class LDAPResource(Resource):
     """
 
     def get(self, ldap_id):
+        logger.debug(f"top of GET /ldaps/{ldap_id}")
         ldap = LDAPConnection.query.filter_by(ldap_id=ldap_id).first()
         if not ldap:
             raise errors.ResourceError(msg=f'No LDAP object found with id {ldap_id}.')
         return utils.ok(result=ldap.serialize, msg='LDAP object retrieved successfully.')
 
     def delete(self, ldap_id):
+        logger.debug(f"top of DELETE /ldaps/{ldap_id}")
         ldap = LDAPConnection.query.filter_by(ldap_id=ldap_id).first()
         if not ldap:
             raise errors.ResourceError(msg=f'No LDAP object found with id {ldap_id}.')
@@ -63,10 +82,12 @@ class OwnersResource(Resource):
     """
 
     def get(self):
+        logger.debug(f"top of GET /owners")
         owners = TenantOwner.query.all()
         return utils.ok(result=[o.serialize for o in owners], msg="Owners retrieved successfully.")
 
     def post(self):
+        logger.debug(f"top of POST /owners")
         validator = RequestValidator(utils.spec)
         result = validator.validate(FlaskOpenAPIRequest(request))
         if result.errors:
@@ -75,9 +96,16 @@ class OwnersResource(Resource):
         validated_body = result.body
         owner = TenantOwner(name=validated_body.name,
                             email=validated_body.email,
-                            institution=validated_body.institution)
+                            institution=validated_body.institution,
+                            create_time=datetime.datetime.utcnow(),
+                            last_update_time=datetime.datetime.utcnow()
+                            )
         db.session.add(owner)
-        db.session.commit()
+        try:
+            db.session.commit()
+        except (sqlalchemy.exc.SQLAlchemyError, sqlalchemy.exc.DBAPIError) as e:
+            msg = utils.get_message_from_sql_exc(e)
+            raise errors.ResourceError(f"Invalid POST data; {msg}")
         return utils.ok(result=owner.serialize,
                         msg="Owner object created successfully.")
 
@@ -88,12 +116,14 @@ class OwnerResource(Resource):
     """
 
     def get(self, email):
+        logger.debug(f"top of GET /owners/{email}")
         owner = TenantOwner.query.filter_by(email=email).first()
         if not owner:
             raise errors.ResourceError(msg=f'No owner object found with email {email}.')
         return utils.ok(result=owner.serialize, msg='Owner object retrieved successfully.')
 
     def delete(self, email):
+        logger.debug(f"top of DELETE /owners/{email}")
         owner = TenantOwner.query.filter_by(email=email).first()
         if not owner:
             raise errors.ResourceError(msg=f'No owner object found with email {email}.')
@@ -108,10 +138,12 @@ class TenantsResource(Resource):
     """
 
     def get(self):
+        logger.debug(f"top of GET /tenants")
         tenants = Tenant.query.all()
         return utils.ok(result=[t.serialize for t in tenants], msg="Tenants retrieved successfully.")
 
     def post(self):
+        logger.debug(f"top of POST /tenants")
         validator = RequestValidator(utils.spec)
         result = validator.validate(FlaskOpenAPIRequest(request))
         if result.errors:
@@ -136,15 +168,23 @@ class TenantsResource(Resource):
                                                f'LDAP {validated_body.service_ldap_connection_id} not found.')
         # create the tenant record --
         tenant = Tenant(tenant_id=validated_body.tenant_id,
-                       base_url=validated_body.base_url,
-                       token_service=validated_body.token_service,
-                       security_kernel=validated_body.security_kernel,
-                       owner=validated_body.owner,
-                       service_ldap_connection_id=validated_body.service_ldap_connection_id,
-                       user_ldap_connection_id=validated_body.user_ldap_connection_id,
-                       description=validated_body.description)
+                        base_url=validated_body.base_url,
+                        is_owned_by_associate_site=validated_body.is_owned_by_associate_site,
+                        token_service=validated_body.token_service,
+                        security_kernel=validated_body.security_kernel,
+                        authenticator=validated_body.authenticator,
+                        owner=validated_body.owner,
+                        service_ldap_connection_id=validated_body.service_ldap_connection_id,
+                        user_ldap_connection_id=validated_body.user_ldap_connection_id,
+                        description=validated_body.description,
+                        create_time=datetime.datetime.utcnow(),
+                        last_update_time=datetime.datetime.utcnow())
         db.session.add(tenant)
-        db.session.commit()
+        try:
+            db.session.commit()
+        except (sqlalchemy.exc.SQLAlchemyError, sqlalchemy.exc.DBAPIError) as e:
+            msg = utils.get_message_from_sql_exc(e)
+            raise errors.ResourceError(f"Invalid POST data; {msg}")
         return utils.ok(result=tenant.serialize, msg="Tenant created successfully.")
 
 
@@ -154,12 +194,14 @@ class TenantResource(Resource):
     """
 
     def get(self, tenant_id):
+        logger.debug(f"top of GET /tenants/{tenant_id}")
         tenant = Tenant.query.filter_by(tenant_id=tenant_id).first()
         if not tenant_id:
             raise errors.ResourceError(msg=f'No tenant found with tenant_id {tenant_id}.')
         return utils.ok(result=tenant.serialize, msg='Tenant retrieved successfully.')
 
     def delete(self, tenant_id):
+        logger.debug(f"top of DELETE /tenants/{tenant_id}")
         tenant = Tenant.query.filter_by(tenant_id=tenant_id).first()
         if not tenant:
             raise errors.ResourceError(msg=f'No tenant found with tenant_id {tenant_id}.')
